[package]
name = "sscript"
version = "0.1.0"
edition = "2021"
authors = ["P4o1o"]
description = "A stack-based programming language interpreter"
license = "MIT"
repository = "https://github.com/P4o1o/stack_script"

[dependencies]
rustyline = "17"
rustc-hash = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "sscript"
path = "src/main.rs"

[lib]
name = "sscript"
path = "src/lib.rs"
